--- a/CV_product design/Coverletter.tex
+++ b/CV_product design/Coverletter.tex
@@ -71,16 +71,15 @@ I am Venkaiah Kavuri, postdoctoral researcher from Dr. Arjun Yodh\textquotesingl
 
 Some of my technical proficiencies include:\\
 \begin{itemize}\itemsep -2pt
-\item Designing, conducting and testing of optical device prototypes and develop commercially-viable product enhancements.\\
+\item Designing, engineering and testing of optical device prototypes and translating them to clinics.\\
 \item Demonstrated record in optical modeling using problem-solving techniques such as Numerical modeling/Simulation, Imaging-Inverse problems, Imaging-Optimization and Data mining.\\
 
 \end{itemize} 
 
-While working as a Postdoc at University of Pennsylvania; I designed instruments to sense/measure changes in optical absorption, scattering and dynamic scattering. I also posses strong fundamental knowledge about amplitude, phase, polarization and coherence properties of NIR-light and using them to probe information about biological tissue. Specifically I originated, designed and built an optical flow and absorption measurement device to be used in Neural ICU for predicting recurrent stroke. 
+While working as a Postdoc at University of Pennsylvania; I designed instruments to sense/measure changes in optical absorption, scattering and dynamic scattering. I also posses strong fundamental knowledge about amplitude, phase, polarization and coherence properties of NIR-light and using them to probe information about biological tissue. Specifically I originated, designed and built an optical flow and absorption measurement device to be used in neuro-ICU for predicting recurrent stroke. \\
 I am also working on wearable blood flow measurement device(using Intel Edison) to be used for measuring blood flow in muscle. During my Phd at University of Texas Arlington, I applied statistical methods to develop a new technique for detecting and imaging early stages of aggressive prostate cancer by creating, engineering and building a TRUS-compatible DOT Probe. I also originated, designed and built multi-spectral, low-cost and portable DOT instrumentation then improved existing image reconstruction methods by combining depth compensation algorithm and L1-regularized least squares method.\\
-
 \vspace{2mm} 
-I welcome the opportunity to participate in a personal interview to answer your questions and better present my qualifications. I look forward to speaking with you soon.\\
+Accomplishing large scale projects offered opportunities to take an active leadership and team member roles for work within an interdisciplinary team of scientists and physicians. I put together (hiring/recruiting) and directly supervised a team to help me with developing the device and work with patients. I welcome the opportunity to participate in a personal interview to answer your questions and better present my qualifications. I look forward to speaking with you soon.\\
 \vspace{2mm} 
 Thank you for your time and consideration.\\
 \vspace{10mm} 
