--- a/CV_product design/cv_1product.bib
+++ b/CV_product design/cv_1product.bib
@@ -6,87 +6,136 @@
 
 
 %% Saved with string encoding Unicode (UTF-8) 
-
-
+@article{patel2012multifunctionality,
+  title={Multifunctionality of indocyanine green-loaded biodegradable nanoparticles for enhanced optical imaging and hyperthermia intervention of cancer},
+  author={Patel, Ronak H and Wadajkar, Aniket S and Patel, Nimit L and  \textbf{V. C. Kavuri} and Nguyen, Kytai T and Liu, Hanli},
+  journal={Journal of biomedical optics},
+  volume={17},
+  number={4},
+  pages={0460031--04600310},
+  year={2012},
+  publisher={International Society for Optics and Photonics}
+}
 
 @article{kavuri2012sparsity,
-	Author = {Kavuri, Venkaiah C and Lin, Zi-Jing and Tian, Fenghua and Liu, Hanli},
-	Journal = {Biomedical optics express},
-	Number = {5},
-	Pages = {943--957},
-	Publisher = {Optical Society of America},
-	Title = {Sparsity enhanced spatial resolution and depth localization in diffuse optical tomography},
-	Volume = {3},
-	Year = {2012}}
-
-@article{patel2012multifunctionality,
-	Author = {Patel, Ronak H and Wadajkar, Aniket S and Patel, Nimit L and Kavuri, Venkaiah C and Nguyen, Kytai T and Liu, Hanli},
-	Journal = {Journal of biomedical optics},
-	Number = {4},
-	Pages = {0460031--04600310},
-	Publisher = {International Society for Optics and Photonics},
-	Title = {Multifunctionality of indocyanine green-loaded biodegradable nanoparticles for enhanced optical imaging and hyperthermia intervention of cancer},
-	Volume = {17},
-	Year = {2012}}
-
-@article{kavuri2014hierarchical,
-	Author = {Kavuri, Venkaiah C and Liu, Hanli},
-	Journal = {Academic radiology},
-	Number = {2},
-	Pages = {250--262},
-	Publisher = {Elsevier},
-	Title = {Hierarchical clustering method to improve transrectal ultrasound-guided diffuse optical tomography for prostate cancer imaging},
-	Volume = {21},
-	Year = {2014}}
-
-@inproceedings{kavuri2013hierarchical,
-	Author = {Kavuri, Venkaiah C and Liu, Hanli},
-	Booktitle = {SPIE BiOS},
-	Organization = {International Society for Optics and Photonics},
-	Pages = {85781K--85781K},
-	Title = {Hierarchical clustering method for improved prostate cancer imaging in diffuse optical tomography},
-	Year = {2013}}
-
-@thesis{kavuri2014development,
-	Author = {Kavuri, Venkaiah Chowdary},
-	Publisher = {Biomedical Engineering},
-	Title = {Development Of Trans-rectal Ultrasound (trus) Coupled Diffuse Optical Tomography (dot) For Prostate Cancer Imaging},
-	Year = {2014}}
-
-@inproceedings{kavuri2014optical,
-	Author = {Kavuri, Venkaiah C and Kapur, Payal and Morgan, Monica and Cadeddu, 		Jeffrey and Roehrborn, Claus and Liu, Hanli},
-	Booktitle = {Biomedical Optics},
-	Organization = {Optical Society of America},
-	Pages = {BM3A--28},
-	Title = {Optical properties of Ex-Vivo Prostate Tissues and the Design of Trans-Rectal Ultrasound Coupled Optical Probe},
-	Year = {2014}}
-
-@inproceedings{kavuri2012hetero,
-	Author = {Kavuri, Venkaiah C and Lin, Zi-Jing and Liu, Hanli},
-	Booktitle = {Biomedical Optics},
-	Organization = {Optical Society of America},
-	Pages = {BTu3A--37},
-	Title={Heterogeneous Hierarchical Segmentation Method for Improved Prostate Cancer Imaging In Diffuse Optical Tomography: Simulation Study},
-	Year = {2012}}
+  title={Sparsity enhanced spatial resolution and depth localization in diffuse optical tomography},
+  author={ \textbf{V. C. Kavuri} and Lin, Zi-Jing and Tian, Fenghua and Liu, Hanli},
+  journal={Biomedical optics express},
+  volume={3},
+  number={5},
+  pages={943--957},
+  year={2012},
+  publisher={Optical Society of America}
+}
 
 @inproceedings{kavuri2012comparison,
-	Author = {Kavuri, Venkaiah C and Lin, Zi-Jing and Liu, Hanli},
-	Booktitle = {Biomedical Optics},
-	Organization = {Optical Society of America},
-	Pages = {BTu3A--22},
-	Title = {Comparison of L1 and L2 Regularizations in Diffuse Optical Tomography},
-	Year = {2012}}
-
-@inproceedings{nguyen2012multifunctionality,
-	Author = {Nguyen, Kytai T and Patel, Ronak H and Patel, Nimet L and Kavuri, Venkaiah C and Liu, Hanli},
-	Publisher = {SPIE},
-	Title = {Multifunctionality of indocyanine green-loaded biodegradable nanoparticles for enhanced optical imaging and hyperthermia intervention of cancer},
-	Year = {2012}}
+  title={Comparison of L1 and L2 Regularizations in Diffuse Optical Tomography},
+  author={ \textbf{V. C. Kavuri} and Lin, Zi-Jing and Liu, Hanli},
+  booktitle={Biomedical Optics},
+  pages={BTu3A--22},
+  year={2012},
+  organization={Optical Society of America}
+}
 
 @inproceedings{krishnamurthy2010detectability,
-	Author = {Krishnamurthy, Venkatagiri and Kavuri, Venkaiah and Tian, Fenghua and Liu, Hanli},
-	Booktitle = {Biomedical Optics},
-	Organization = {Optical Society of America},
-	Pages = {BTuD103},
-	Title = {Detectability of Hemodynamic Response to Thermal Pain in Pre-Frontal Cortex Using Diffuse Optical Tomography},
-	Year = {2010}}
+  title={Detectability of Hemodynamic Response to Thermal Pain in Pre-Frontal Cortex Using Diffuse Optical Tomography},
+  author={Krishnamurthy, Venkatagiri and  \textbf{V. C. Kavuri} and Tian, Fenghua and Liu, Hanli},
+  booktitle={Biomedical Optics},
+  pages={BTuD103},
+  year={2010},
+  organization={Optical Society of America}
+}
+
+@inproceedings{kavuri2012heterogeneous,
+  title={Heterogeneous Hierarchical Segmentation Method for Improved Prostate Cancer Imaging In Diffuse Optical Tomography: Simulation Study},
+  author={Kavuri, Venkaiah and Lin, Zi-Jing and Liu, Hanli},
+  booktitle={Biomedical Optics},
+  pages={BTu3A--37},
+  year={2012},
+  organization={Optical Society of America}
+}
+
+@inproceedings{kavuri2013hierarchical,
+  title={Hierarchical clustering method for improved prostate cancer imaging in diffuse optical tomography},
+  author={ \textbf{V. C. Kavuri} and Liu, Hanli},
+  booktitle={SPIE BiOS},
+  pages={85781K--85781K},
+  year={2013},
+  organization={International Society for Optics and Photonics}
+}
+
+@article{kavuri2014hierarchical,
+  title={Hierarchical clustering method to improve transrectal ultrasound-guided diffuse optical tomography for prostate cancer imaging},
+  author={ \textbf{V. C. Kavuri} and Liu, Hanli},
+  journal={Academic radiology},
+  volume={21},
+  number={2},
+  pages={250--262},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@inproceedings{kavuri2014optical,
+  title={Optical properties of Ex-Vivo Prostate Tissues and the Design of Trans-Rectal Ultrasound Coupled Optical Probe},
+  author={ \textbf{V. C. Kavuri} and Kapur, Payal and Morgan, Monica and Cadeddu, Jeffrey and Roehrborn, Claus and Liu, Hanli},
+  booktitle={Biomedical Optics},
+  pages={BM3A--28},
+  year={2014},
+  organization={Optical Society of America}
+}
+
+@thesis{kavuri2014development,
+  title={Development Of Trans-rectal Ultrasound (TRUS) Coupled Diffuse Optical Tomography (DOT) For Prostate Cancer Imaging},
+  author={Kavuri, Venkaiah Chowdary},
+  year={2014},
+  publisher={Biomedical Engineering}
+}
+
+@inproceedings{chen2015multi,
+  title={Multi-frequency diffuse optical tomography for cancer detection},
+  author={Chen, Chen and  \textbf{V. C. Kavuri} and Wang, Xinlong and Li, Ruoyu and Liu, Hanli and Huang, Junzhou},
+  booktitle={Biomedical Imaging (ISBI), 2015 IEEE 12th International Symposium on},
+  pages={67--70},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{wang2016fast,
+  title={Fast blood flow monitoring in deep tissues with real-time software correlators},
+  author={Wang, Detian and Parthasarathy, Ashwin B and Baker, Wesley B and Gannon, Kimberly and  \textbf{V. C. Kavuri} and Ko, Tiffany and Schenkel, Steven and Li, Zhe and Li, Zeren and Mullen, Michael T and others},
+  journal={Biomedical Optics Express},
+  volume={7},
+  number={3},
+  pages={776--797},
+  year={2016},
+  publisher={Optical Society of America}
+}
+
+@inproceedings{parthasarathy2016functional,
+  title={Functional monitoring of blood flow dynamics in brain with photon correlation techniques},
+  author={Parthasarathy, Ashwin B and Gannon, Kimberly and Baker, Wesley B and  \textbf{V. C. Kavuri} and Mullen, Michael T and Detre, John A and Yodh, Arjun G},
+  booktitle={SPIE BiOS},
+  pages={97070H--97070H},
+  year={2016},
+  organization={International Society for Optics and Photonics}
+}
+
+
+@article{ban2016heterodyne,
+  title={Heterodyne frequency-domain multispectral diffuse optical tomography of breast cancer in the parallel-plane transmission geometry},
+  author={Ban, Han Y and Schweiger, Martin and \textbf{V. C. Kavuri} and Cochran, Jeffery M and Xie, Long and Busch, David R and Katrasnik, Jaka and Pathak, Saurav and Chung, So Hyun and Lee, Kijoon and Choe, Regine and Czerniecki, Brian and  Arridge, Simon R  and Yodh, Arjun G},
+  journal={Medical Physics},
+  volume={Under Review, \textbf{Equal Contribution} and Corresponding Author},
+  number={},
+  pages={},
+  year={2016},
+  publisher={American Association of Physicists in Medicine}
+}
+
+
+
+
+
+
+
+
