--- a/cv_1.tex
+++ b/cv_1.tex
@@ -64,55 +64,28 @@ sorting=nyt
 \end{center} 
 %----------------------------------------------------------------------------------------
 
-\vspace{-9mm} 
-
-\section{Summary of Qualifications}
-\begin{itemize}\itemsep 0pt
-
-\item Experienced with non-invasive optical device designing and testing, which can be used to sense/image biomarkers.
-
-\item In-depth understanding 3D image reconstruction algorithms(inverse problems) and their combinations.
-
-\item Experimental design and human data collection in clinical environment. 
-
-\item Programing - Matlab, Labview, Solidworks, Python, SAS and SPSS.
-
-\item Signal processing tools - Short time Fourier transform (STFT), Wavelet transform, Kalman filtering.
-
-\item Experienced with extracting weak signals from extremely noisy data using hardware (lock-in amplifiers) and software(PCA) techniques.    
-
-
-\end{itemize}
-\vspace{-7mm}
-
-
-
-
-
+\section{Areas of Interest}
+Instrument Design, Clinical Measurements, Diffuse Optical Tomography, Diffuse Coherence Spectroscopy and Image reconstruction.
+\vspace{-5mm}
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
 
 \section{Education}
 \begin{flushleft}  
-\textbf{University of Pennsylvania}, Philadelphia, PA  \hfill October 2014 - Present \\ 
+\textbf{University of Pennsylvania}, Philadelphia, PA  \hfill October 2014 - June 2016 \\ 
 Postdoctoral Researcher in Department of Physics and Astronomy \\ 
 \vspace{-3mm}
 \begin{itemize}\itemsep -2pt
-\item Projects (in progress): (1) Optical instrumentation (stroke measurements) for Neural ICU. (2) Wearable optical flow measurement device design for muscle during excersise.  
-\item Projects (completed): Optical 3D image reconstruction(using Finite Element Methods and solving Inverse problems) of human breast cancer from 2D camera images. 
 \item Advisor: Professor Arjun Yodh.
-\item Areas of focus: Instrument Design, Clinical Measurements, Diffuse Optical Tomography, Diffuse Coherence Spectroscopy and Image reconstruction.
 \end{itemize}
-
 
 \textbf{University of Texas Arlington}, Arlington, TX \hfill January 2008 - August 2014 \\ 
 Doctor of Philosophy in Biomedical Engineering/Medical Imaging \\
 \vspace{-3mm}
 \begin{itemize}\itemsep -2pt
-\item Dissertation -  Development Of Trans-rectal Ultrasound (TRUS) Coupled Diffuse Optical Tomography (DOT) For Prostate Cancer Imaging
-\item Advisor: Professor Hanli Liu. 
-\item Areas of focus: Probe Design, Clinical Measurements, Image Reconstruction and Image Processing.
+\item Dissertation -  Development Of Trans-rectal Ultrasound (TRUS) Coupled Diffuse Optical Tomography (DOT) For Prostate Cancer Imaging.
+\item Advisor: Professor Hanli Liu.
 \end{itemize}
  
 \textbf{Jawaharlal Nehru Technological University}, Hyderabad, India \hfill September 2003 - May 2007\\
@@ -123,6 +96,8 @@ Bachelor of Technology in Biomedical Engineering \\
 \item First class with distinction
 \end{itemize}
 \end{flushleft}  
+
+
 %----------------------------------------------------------------------------------------
  
 \vspace{-7mm}% Some whitespace between sections
@@ -134,48 +109,48 @@ Bachelor of Technology in Biomedical Engineering \\
 \section{Professional Experience}
 \begin{flushleft}  
 
-\textbf{University of Pennsylvania}, Philadelphia, PA . \hfill October 2014 - Present \\ 
-\textbf{\textcolor{darkgray}{Postdoctoral Researcher,} }Yodh Biomedical Optics Lab, Philadelphia, PA
-\vspace{-2.5mm}
-\begin{itemize} \itemsep -2pt % Reduce space between items
-\item Designed a non-invasive cerebral blood flow instrument to be used in neural ICU for predicting recurrent stroke. The instrument will be used to measure blood flow in prefrontal cortex of the brain using single photon counting techniques and diffuse auto-correlation techniques. 
-\item Image processing and reconstruction of breast cancer images using Diffuse Optical Tomography.
-\item Supervised and trained new graduate students, undergraduate students and research assistants.  
-\end{itemize}
+
+\textbf{Masimo Corporation,} Irvine, CA. \hfill June 2016 - Present\\ 
+\textbf{\textcolor{darkgray}{Algorithm Engineer} }
+\vspace{2mm} 
+
+\textbf{University of Pennsylvania}, Philadelphia, PA . \hfill October 2014 - June 2016\\ 
+\textbf{\textcolor{darkgray}{Postdoctoral Researcher,} }
+\vspace{2mm} 
 
 \textbf{University of Texas Arlington}, Arlington, TX \hfill August 2010 - August 2014 \\
-\textbf{\textcolor{darkgray}{Graduate Research Assistant,} }Biomedical Optics Lab, Arlington, TX 
-\begin{itemize} \itemsep -2pt % Reduce space between items
-\vspace{-2.5mm}
-\item Developed a technique to detect and image early stages of aggressive prostate cancer by creating, engineering and building Transrectal Ultrasound (TRUS)-compatible Diffuse Optical Tomography (DOT) Probe (using SolidWorks), which increased sensitivity and specificity to detect prostate cancer. 
+\textbf{\textcolor{darkgray}{Graduate Research Assistant,} }
 
-\item Originated, designed and built multi-spectral, low-cost and portable DOT instrumentation (using basic electronic circuit design and signal processing) then improved existing reconstruction methods (enhanced depth localization and images) by combining depth compensation algorithm and L1-regularized least squares method.
-
-\item Research work resulted in 2 peer-reviewed, 1st-authored journal papers. This produced further external funding for continuous development in detection/diagnosis of prostate cancer.
-
-\end{itemize}
 \end{flushleft}
  
-%----------------------------------------------------------------------------------------
-
-\vspace{-7mm} % Some whitespace between sections
+\vspace{-7mm}  % Some whitespace between sections
 
 %----------------------------------------------------------------------------------------
-%	COMPUTER SKILLS SECTION
+%	HONORS SECTION
 %----------------------------------------------------------------------------------------
 
-\section{Computer Skills}
+\section{{Honors}} 
 
-\vspace{2pt} % Gap between title and text
-\begin{center}
-
-\begin{tabular}{c|c|c|c|c|c} Matlab & Labview & Python & C &Solidworks &Comsol \\
-MS Office& Ubuntu & ImageJ &\LaTeX &SAS &SPSS\end{tabular}
-\end{center}
-
+\vspace{-5pt} % Reduce space between section title and contents
+\begin{itemize} \itemsep -2pt 
+\item STEM Full tuition assistantship, University of Texas Arlington. \\
+\item Outstanding Student Award - 2014, University of Texas Arlington. \\
+\end{itemize}
 %----------------------------------------------------------------------------------------
 
 \vspace{-7mm}  % Some whitespace between sections
+
+%----------------------------------------------------------------------------------------
+%	PUBLICATIONS SECTION
+%----------------------------------------------------------------------------------------
+
+\section{{Publications}} 
+\printbibliography[title={Journal Publications},type=article,heading=subbibliography,resetnumbers=true]
+%\vspace{-6mm}
+\printbibliography[title={Conference Publications},type=inproceedings,heading=subbibliography,resetnumbers=true]
+
+
+\vspace{-5mm} % Some whitespace between sections
 
 %----------------------------------------------------------------------------------------
 %	PATENTS SECTION
@@ -207,38 +182,7 @@ MS Office& Ubuntu & ImageJ &\LaTeX &SAS &SPSS\end{tabular}
 \item Member, Institute of Electrical and Electronics Engineers(IEEE). 
 \end{itemize}
 
-%-------------------------------------of---------------------------------------------------
-
-\vspace{-5mm} % Some whitespace between sections
-
-%----------------------------------------------------------------------------------------
-%	HONORS SECTION
 %----------------------------------------------------------------------------------------
 
-\section{{Honors}} 
-
-\vspace{-5pt} % Reduce space between section title and contents
-\begin{itemize} \itemsep -2pt 
-\item STEM Full tuition assistantship, University of Texas Arlington. \\
-\item Outstanding Student Award - 2014, University of Texas Arlington. \\
-\end{itemize}
-%----------------------------------------------------------------------------------------
-
-\vspace{-7mm}  % Some whitespace between sections
-
-%----------------------------------------------------------------------------------------
-%	PUBLICATIONS SECTION
-%----------------------------------------------------------------------------------------
-
-\section{{Publications}} 
-\vspace{-3mm}
-\printbibliography[title={Articles},type=article,heading=subbibliography]
-\vspace{-4mm}
-\printbibliography[title={Conference Publications},type=inproceedings,heading=subbibliography]
-\vspace{-4mm}
-\printbibliography[title={PhD Thesis},type=thesis,heading=subbibliography]
-
-%----------------------------------------------------------------------------------------
-
-\let\thefootnote\relax\footnotetext{Resume compiled on \today}
+\let\thefootnote\relax\footnotetext{CV compiled on \today}
 \end{document}
